--- a/html/about.html
+++ b/html/about.html
@@ -18,14 +18,10 @@
     <li class="nav-item">
       <a class="nav-link" href="#">About</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="form.html">Form</a>
+    </li>
   </ul>
-
-<!-- Navbar text-->
-<span class="navbar-text">
-  Navbar text
-</span>
-</nav>
-
   </header>
 </div> <!-- End col-12 -->
 </div> <!-- End row for nav -->
