--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <title>Home Page</title>
+      <title>Home</title>
   </head>
     <body>
       <div class="row">
@@ -11,19 +11,17 @@
             <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
 <!-- Links -->
-  <ul class="navbar-nav">
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Home</a>
+  </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="/html/about.html">About</a>
     </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../html/about.html">About</a>
-      </li>
-    </ul>
-
-  <!-- Navbar text-->
-  <span class="navbar-text">
-    Navbar text
-  </span>
+    <li class="nav-item">
+      <a class="nav-link" href="/html/form.html">Form</a>
+    </li>
+  </ul>
 
 </nav>
 
@@ -34,59 +32,29 @@
 <main>
   <div class="container">
     <div class="row extra-margin">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-md">
-          <img class = "center" src="http://placehold.it/250x250"   alt="image">
-        </div> <!-- ends col picture -->
-    </div>
-        <div class="row">
-        <div class="col-md">
+      <div class="col-md card">
+          <img class = "center card-img-top" src="http://placehold.it/250x250"   alt="image">
+          <h4 class="card-title">My Item</h4>
+          <h6 class="card subtitle">$5.98</h6>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <button type="button" class="btn btn-secondary center">Purchase </button>
-        </div> <!--ends col for button -->
-        </div> <!-- ends second row -->
-        <div class="row">
-          <div class="col-md">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div> <!--  ends lorem col -->
-        </div> <!-- ends third row -->
+        </div> <!-- ends col picture -->
 
-      </div>
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-md">
-          <img class = "center" src="http://placehold.it/250x250"   alt="image">
-        </div> <!-- ends col picture -->
-      </div>
-          <div class="row">
-            <div class="col-md">
-              <button type="button" class="btn btn-secondary center">Purchase </button>
-          </div> <!--ends col for button -->
-          </div> <!-- ends second row -->
-        <div class="row">
-          <div class="col-md">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div> <!--  ends lorem col -->
-        </div> <!-- ends third row -->
-      </div>
-    <div class="col-md-4">
-      <div class="row">
-        <div class="col-md">
-          <img class = "center" src="http://placehold.it/250x250"   alt="image">
-        </div> <!-- ends col picture -->
-      </div>
-        <div class="row">
-          <div class="col-md">
+        <div class="col-md card">
+            <img class = "center card-img-top" src="http://placehold.it/250x250"   alt="image">
+            <h4 class="card-title">My Item</h4>
+            <h6 class="card subtitle">$5.98</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <button type="button" class="btn btn-secondary center">Purchase </button>
-        </div> <!--ends col for button -->
-      </div> <!-- ends second row -->
-        <div class="row">
-          <div class="col-md">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div> <!--  ends lorem col -->
-        </div> <!-- ends third row -->
-      </div>
-    </div> <!-- end first main row -->
+          </div> <!-- ends col picture -->
+
+          <div class="col-md card">
+              <img class = "center card-img-top" src="http://placehold.it/250x250"   alt="image">
+              <h4 class="card-title">My Item</h4>
+              <h6 class="card subtitle">$5.98</h6>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <button type="button" class="btn btn-secondary center">Purchase </button>
+            </div> <!-- ends col picture -->
 
     <div class="row extra-margin">
       <div class="col-md-5">
